@@ -6,6 +6,10 @@
 
 - Sidebar keybindings for quick journal navigation: =[= (previous), =]= (next), =t= (today), =d= (pick date).
 
+** Changed
+
+- Use =vulpea-ui-clean-org-markup= for preview cleaning in previous years widget.
+
 * v1.0.0-rc.1
 
 Initial release candidate.
